# zeiss-inspect-api-wheel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  create-pull-request.yml  release.yml
src/gom/: __common__.py  __encoding__.py  __init__.py  __network__.py  __test__.py  __tools__.py  __types__.py  extensions.py
src/gom/api/addons/: __init__.py
src/gom/api/dialog/: __init__.py
src/gom/api/extensions/: __init__.py
src/gom/api/extensions/diagrams/: __init__.py
src/gom/api/extensions/nominals/: __init__.py
src/gom/api/imaging/: __init__.py
src/gom/api/introspection/: __init__.py
src/gom/api/project/: __init__.py
src/gom/api/settings/: __init__.py
